--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 <!-- navigation bar -->
                 <nav class="navlink_area">
                     <ul class="d-flex justify-content-center align-items-center flex-lg-row flex-column gap-4">
-                        <li><a href="#" class="navlink">LOOKBOOK</a></li>
-                        <li><a href="#" class="navlink">SHOWROOMS</a></li>
-                        <li><a href="#" class="navlink">BECOME A CUSTOMER</a></li>
-                        <li><a href="#" class="navlink">TRADESHOWS</a></li>
+                        <li><a href="lookbook.html" class="navlink">LOOKBOOK</a></li>
+                        <li><a href="events&Promotions.html" class="navlink">Events & Promotions</a></li>
+                        <li><a href="tradeshows.html" class="navlink">TRADESHOWS</a></li>
+                        <li><a href="becomeACustomer.html" class="navlink">BECOME A CUSTOMER</a></li>
                     </ul>
                 </nav>
                 <div class="d-flex justify-content-end align-items-center gap-4">
@@ -335,10 +335,10 @@
 
             </div>
             <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
-                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">My Account</a>
-                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">Trade Shows</a>
-                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">About Us</a>
-                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">Showroom</a>
+                <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to buy</a>
+                <a href="tradeshows.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Trade Shows</a>
+                <a href="aboutUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">About Us</a>
+                <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events & Promotions</a>
                 <a href="contactUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Contact Us</a>
             </div>
             <!-- copywrite start -->
