--- a/lookbook.html
+++ b/lookbook.html
@@ -33,7 +33,7 @@
     </div>
     <!-- pre loader with logo end -->
     <!-- ======================header area start=================== -->
-    <section class="header py-3 position-fixed top-0 start-0 w-100">
+    <section class="header lookbookheader py-3 position-fixed top-0 start-0 w-100">
         <div class="container">
             <div class="d-flex justify-content-between align-items-center">
                 <!-- logo -->
@@ -41,7 +41,7 @@
                     <img src="assets/images/logo.svg" alt="Logo">
                 </a>
                 <!-- navigation bar -->
-                 <nav class="navlink_area">
+                <nav class="navlink_area">
                     <ul class="d-flex justify-content-center align-items-center flex-lg-row flex-column gap-4">
                         <li><a href="lookbook.html" class="navlink">LOOKBOOK</a></li>
                         <li><a href="events&Promotions.html" class="navlink">Events & Promotions</a></li>
@@ -76,67 +76,127 @@
     <!-- ======================header area end===================== -->
 
     <!-- =======================hero section start======================= -->
-    <section class="contact_hero_section h-50">
+    <section class="lookbookhero_section">
         <div class="container">
-            <div style="padding: 250px 0;">
-                <h1 class="display-2 fw-normal text-white fm-didact text-center">Contact Us</h1>
-                <p class="text-center fs-5 text-white fw-normal mt-3">We are committed to processing the information in
-                    order to contact you and talk about your project.</p>
+            <div class="d-flex justify-content-center align-items-center flex-nowrap" style="padding-top: 180px;">
+                <div class="borderline w-100"></div>
+                <h1 class="flex-shrink-0 fm-forum mb-0 fw-normal text-dark lookbookherotitle">Lookbook</h1>
+                <div class="borderline w-100"></div>
             </div>
+            <p class="fw-normal fs-6 text-dark text-center fm-lato" style="margin-top: -15px;">Inspiration for every
+                space</p>
         </div>
     </section>
     <!-- =======================hero section end======================= -->
 
-    <!-- ==================contact information and contact form section start================== -->
-    <section class="contactInformationSection py-5">
-        <div class="container px-md-5">
-            <div class="row g-lg-5 g-4 px-lg-5">
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="contactInformation d-flex flex-column justify-content-center align-items-start gap-4 ">
-                        <h2 class="text-dark fs-1 fw-normal fm-forum">Contact Us</h2>
-                        <p class="text-dark fs-20 fw-normal fm-lato">Please submit your questions or comments via the
-                            form below, and we’ll respond within 24 hours.</p>
-                        <div class="d-flex flex-column gap-4">
-                            <div class="d-flex align-items-start gap-3">
-                                <img style="height: 22px; width: 22px;" src="assets/images/property-location.svg"
-                                    alt="Location Icon">
-                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -8px;">Main Office,
-                                    Showroom & Warehouse 11242 Indian Trail</span>
-                            </div>
-                            <div class="d-flex align-items-start gap-3">
-                                <img style="height: 22px; width: 22px;" src="assets/images/mobile-chat.svg"
-                                    alt="Phone Icon">
-                                <span class="text-dark fs-20 fw-normal fm-lato"
-                                    style="margin-top: -8px;">214-484-9664</span>
-                            </div>
-                            <div class="d-flex align-items-start gap-3">
-                                <img style="height: 22px; width: 22px;" src="assets/images/subway_time-5.svg"
-                                    alt="Time Icon">
-                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -8px;">Monday to
-                                    Friday: 9am– 5.30pm CST​</span>
-                            </div>
-                        </div>
+
+
+    <!-- =========================Our Furniture Gallery start====================== -->
+    <section class="py-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-lg-4 col-xl-4 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery1.png" alt="Gallery Image 1">
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="contactForm pt-2">
-                        <form action="#" method="POST" class="d-flex flex-column gap-3 fs-6 fw-normal fm-lato">
-                            <input type="text" class="form-control" placeholder="Name" required>
-                            <input type="email" class="form-control" placeholder="Email" required>
-                            <input type="text" class="form-control" placeholder="Subject" required>
-                            <textarea class="form-control" rows="4" placeholder="Message" required
-                                style="resize: none;"></textarea>
-                            <button type="submit" class="btn bg-dark text-white fw-medium py-2"
-                                style="font-size: 18px;">Send</button>
-                        </form>
+                <div class="col-lg-4 col-xl-4 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery2.png" alt="Gallery Image 2">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-4 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery3.png" alt="Gallery Image 3">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-6 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery4.png" alt="Gallery Image 4">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-6 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery5.png" alt="Gallery Image 4">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-4 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery1.png" alt="Gallery Image 1">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-4 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery2.png" alt="Gallery Image 2">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-xl-4 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery3.png" alt="Gallery Image 3">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-6 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery4.png" alt="Gallery Image 4">
+                    </div>
+                </div>
+                <div class="col-lg-6 col-xl-6 col-md-6">
+                    <div class="rounded-3 overflow-hidden" style="height: 330px;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/gallery5.png" alt="Gallery Image 4">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- ==================contact information and contact form section end================== -->
+    <!-- =========================Our Furniture Gallery end====================== -->
 
+    <!-- ===============important note start==============  -->
+    <section class="py-5" style="background: #F7F6F6;">
+        <div class="container">
+            <p class="fm-forum fs-1 fw-normal mb-0 lh-base text-center text-dark px-lg-5">
+                "Every space should be a true expression of the people who call it home unique, personal, and full of
+                character."
+            </p>
+        </div>
+    </section>
+    <!-- ===============important note  end==============  -->
 
+    <!-- =====================More Collection start===================== -->
+    <section class="py-5">
+        <div class="container">
+            <h1 class="fs-4 fw-normal text-dark mb-3 fm-forum lh-base text-center">More Collection</h1>
+            <p class="fw-normal fs-6 fm-lato text-dark mb-4 lh-base text-center">Explore other curated looks </p>
+            <div class="row g-4 mt-1">
+                <div class="col-lg-4">
+                    <div class="rounded-3 overflow-hidden" style="height:229px ;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/livingRoom.png" alt="Living Room">
+                    </div>
+                    <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">Living Room</h1>
+                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Create a welcoming and stylish living
+                        space with our range of sofas, armchairs, and coffee tables.</p>
+                </div>
+                <div class="col-lg-4">
+                    <div class="rounded-3 overflow-hidden" style="height:229px ;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/diningRoom.png" alt="Dining Room">
+                    </div>
+                    <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">Dining Room</h1>
+                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Dine in style with our exquisite
+                        dining
+                        tables, chairs, and sideboards.</p>
+                </div>
+                <div class="col-lg-4">
+                    <div class="rounded-3 overflow-hidden" style="height:229px ;">
+                        <img class="w-100 h-100" loading="lazy" src="assets/images/bedRoom.png" alt="Bed Room">
+                    </div>
+                    <h1 class="fm-lato fw-medium fs-6 text-dark mt-3 mb-2">BedRoom</h1>
+                    <p class="fm-lato fw-normal fs-14 lh-base text-black-500">Transform your bedroom into a
+                        sanctuary
+                        with our luxurious beds, wardrobes, and bedside tables.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- =====================More Collection end===================== -->
 
 
     <!-- =====================footer start===================== -->
@@ -146,12 +206,14 @@
                 <div class="footerLogo">
                     <img src="assets/images/logo.svg" alt="Footer Logo">
                 </div>
+
             </div>
-           <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
+            <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
                 <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to buy</a>
                 <a href="tradeshows.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Trade Shows</a>
                 <a href="aboutUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">About Us</a>
-                <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events & Promotions</a>
+                <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events &
+                    Promotions</a>
                 <a href="contactUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Contact Us</a>
             </div>
             <!-- copywrite start -->
