--- a/tradeshows.html
+++ b/tradeshows.html
@@ -76,67 +76,39 @@
     <!-- ======================header area end===================== -->
 
     <!-- =======================hero section start======================= -->
-    <section class="contact_hero_section h-50">
+    <section class="tradeshow_hero_section h-50">
         <div class="container">
             <div style="padding: 250px 0;">
-                <h1 class="display-2 fw-normal text-white fm-didact text-center">Contact Us</h1>
-                <p class="text-center fs-5 text-white fw-normal mt-3">We are committed to processing the information in
-                    order to contact you and talk about your project.</p>
+                <h1 class="display-2 fw-normal text-white fm-forum text-center mb-0">Trade Shows</h1>
+                <p class="text-center fs-6 text-white fw-normal mt-0">Experience our exclusive furniture collections.</p>
             </div>
         </div>
     </section>
     <!-- =======================hero section end======================= -->
 
-    <!-- ==================contact information and contact form section start================== -->
-    <section class="contactInformationSection py-5">
-        <div class="container px-md-5">
-            <div class="row g-lg-5 g-4 px-lg-5">
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="contactInformation d-flex flex-column justify-content-center align-items-start gap-4 ">
-                        <h2 class="text-dark fs-1 fw-normal fm-forum">Contact Us</h2>
-                        <p class="text-dark fs-20 fw-normal fm-lato">Please submit your questions or comments via the
-                            form below, and we’ll respond within 24 hours.</p>
-                        <div class="d-flex flex-column gap-4">
-                            <div class="d-flex align-items-start gap-3">
-                                <img style="height: 22px; width: 22px;" src="assets/images/property-location.svg"
-                                    alt="Location Icon">
-                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -8px;">Main Office,
-                                    Showroom & Warehouse 11242 Indian Trail</span>
-                            </div>
-                            <div class="d-flex align-items-start gap-3">
-                                <img style="height: 22px; width: 22px;" src="assets/images/mobile-chat.svg"
-                                    alt="Phone Icon">
-                                <span class="text-dark fs-20 fw-normal fm-lato"
-                                    style="margin-top: -8px;">214-484-9664</span>
-                            </div>
-                            <div class="d-flex align-items-start gap-3">
-                                <img style="height: 22px; width: 22px;" src="assets/images/subway_time-5.svg"
-                                    alt="Time Icon">
-                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -8px;">Monday to
-                                    Friday: 9am– 5.30pm CST​</span>
-                            </div>
-                        </div>
-                    </div>
+
+     <!--====================Upcoming Trade Show start====================  -->
+    <section class="py-5">
+        <div class="">
+            <h1
+                class="fs-2 fw-normal text-dark fm-forum lh-base text-center">Upcoming Trade Shows</h1>
+                <p class="fm-lato fw-normal fs-6 mb-5 text-center text-dark">Stop by to explore our latest collections and experience the quality firsthand.</p>
+            <div class="d-flex justify-content-center align-items-center gap-sm-4 gap-1 px-2">
+                 <div class="upcommingTradeLogoBox pt-3" style="max-width: 209px;">
+                    <img class="mb-1" src="assets/images/hPMKT_Logo.png" alt="">
+                    <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center">October 25 - 29th, 2025
+                        Plaza Suites 1-517</p>
                 </div>
-                <div class="col-lg-6 col-md-6 col-12">
-                    <div class="contactForm pt-2">
-                        <form action="#" method="POST" class="d-flex flex-column gap-3 fs-6 fw-normal fm-lato">
-                            <input type="text" class="form-control" placeholder="Name" required>
-                            <input type="email" class="form-control" placeholder="Email" required>
-                            <input type="text" class="form-control" placeholder="Subject" required>
-                            <textarea class="form-control" rows="4" placeholder="Message" required
-                                style="resize: none;"></textarea>
-                            <button type="submit" class="btn bg-dark text-white fw-medium py-2"
-                                style="font-size: 18px;">Send</button>
-                        </form>
-                    </div>
+                <div class="separatorBorder"></div>
+                <div class="upcommingTradeLogoBox" style="max-width: 245px;">
+                    <img src="assets/images/dallasMarketLogo.png" alt="">
+                    <p class="fw-normal fs-6 fm-lato text-dark lh-base text-center mt-2">June 18 - 24th, 2025 WTC 6262
+                        Dallas Market Center</p>
                 </div>
             </div>
         </div>
     </section>
-    <!-- ==================contact information and contact form section end================== -->
-
-
+    <!--====================Upcoming Trade Show end====================  -->
 
 
     <!-- =====================footer start===================== -->
