--- a/contactUs.html
+++ b/contactUs.html
@@ -41,7 +41,7 @@
                     <img src="assets/images/logo.svg" alt="Logo">
                 </a>
                 <!-- navigation bar -->
-                 <nav class="navlink_area">
+                <nav class="navlink_area">
                     <ul class="d-flex justify-content-center align-items-center flex-lg-row flex-column gap-4">
                         <li><a href="lookbook.html" class="navlink">LOOKBOOK</a></li>
                         <li><a href="events&Promotions.html" class="navlink">Events & Promotions</a></li>
@@ -76,7 +76,7 @@
     <!-- ======================header area end===================== -->
 
     <!-- =======================hero section start======================= -->
-    <section class="contact_hero_section h-50">
+    <section class="common_herobg h-50">
         <div class="container">
             <div style="padding: 250px 0;">
                 <h1 class="display-2 fw-normal text-white fm-didact text-center">Contact Us</h1>
@@ -94,25 +94,25 @@
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="contactInformation d-flex flex-column justify-content-center align-items-start gap-4 ">
                         <h2 class="text-dark fs-1 fw-normal fm-forum">Contact Us</h2>
-                        <p class="text-dark fs-20 fw-normal fm-lato">Please submit your questions or comments via the
-                            form below, and we’ll respond within 24 hours.</p>
+                        <p class="text-dark fs-20 fw-normal fm-lato">Should you have any inquiries, kindly complete the
+                            form provided. Our team will respond to your request within 24 hours.</p>
                         <div class="d-flex flex-column gap-4">
                             <div class="d-flex align-items-start gap-3">
                                 <img style="height: 22px; width: 22px;" src="assets/images/property-location.svg"
                                     alt="Location Icon">
-                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -8px;">Main Office,
-                                    Showroom & Warehouse 11242 Indian Trail</span>
+                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -5px;">Corporate
+                                    Office: 11242 Indian Trail, Dallas, TX 75229</span>
                             </div>
                             <div class="d-flex align-items-start gap-3">
                                 <img style="height: 22px; width: 22px;" src="assets/images/mobile-chat.svg"
                                     alt="Phone Icon">
                                 <span class="text-dark fs-20 fw-normal fm-lato"
-                                    style="margin-top: -8px;">214-484-9664</span>
+                                    style="margin-top: -5px;">214-484-9664</span>
                             </div>
                             <div class="d-flex align-items-start gap-3">
                                 <img style="height: 22px; width: 22px;" src="assets/images/subway_time-5.svg"
                                     alt="Time Icon">
-                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -8px;">Monday to
+                                <span class="text-dark fs-20 fw-normal fm-lato" style="margin-top: -5px;">Monday to
                                     Friday: 9am– 5.30pm CST​</span>
                             </div>
                         </div>
@@ -147,11 +147,12 @@
                     <img src="assets/images/logo.svg" alt="Footer Logo">
                 </div>
             </div>
-           <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
+            <div class="footerLinks d-flex justify-content-center align-items-center gap-md-5 gap-3 mt-5 flex-wrap">
                 <a href="#" class="text-dark fm-noto fw-normal fs-6 text-black-500">How to buy</a>
                 <a href="tradeshows.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Trade Shows</a>
                 <a href="aboutUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">About Us</a>
-                <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events & Promotions</a>
+                <a href="events&Promotions.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Events &
+                    Promotions</a>
                 <a href="contactUs.html" class="text-dark fm-noto fw-normal fs-6 text-black-500">Contact Us</a>
             </div>
             <!-- copywrite start -->
