become a customer completed

--- a/contactUs.html
+++ b/contactUs.html
@@ -121,10 +121,10 @@
                 <div class="col-lg-6 col-md-6 col-12">
                     <div class="contactForm pt-2">
                         <form action="#" method="POST" class="d-flex flex-column gap-3 fs-6 fw-normal fm-lato">
-                            <input type="text" class="form-control" placeholder="Name" required>
-                            <input type="email" class="form-control" placeholder="Email" required>
-                            <input type="text" class="form-control" placeholder="Subject" required>
-                            <textarea class="form-control" rows="4" placeholder="Message" required
+                            <input type="text" class="form-control h-64" placeholder="Name" required>
+                            <input type="email" class="form-control h-64" placeholder="Email" required>
+                            <input type="text" class="form-control h-64" placeholder="Subject" required>
+                            <textarea class="form-control" rows="6" placeholder="Message" required
                                 style="resize: none;"></textarea>
                             <button type="submit" class="btn bg-dark text-white fw-medium py-2"
                                 style="font-size: 18px;">Send</button>
